[build-system]
requires      = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdshadertoolkit"
version = "0.0.0"
description = "A GDShader toolkit"
authors = [{ name = "Gray Espinoza", email = "grey@grayespinoza.dev" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["Godot", "GDShader", "Parser", "Linter", "Formatter"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Documentation = "https://github.com/grayespinoza/godot-gdshader-toolkit/blob/main/README.md"
Source        = "https://github.com/grayespinoza/godot-gdshader-toolkit"
Tracker       = "https://github.com/grayespinoza/godot-gdshader-toolkit/issues"
